nullaway_error_9b66748c-e131-40b4-80e6-ff706091b781.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/SoundSource.java:34: error: [NullAway] initializer method does not guarantee @NonNull fields sound (line 28), playback (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public SoundSource() {
         ^
    (see http://t.uber.com/nullaway )
